--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "lucide-react": "^0.298.0",
+    "maplibre-gl": "^3.6.2",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
