--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropdown-menu": "^0.0.2",
     "react-hook-form": "^7.49.2",
     "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^1.14.0",
