--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-auth": "^4.24.5",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-dropdown-menu": "^0.0.2",
     "react-hook-form": "^7.49.2",
