--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.13.2",
+    "@tanstack/react-virtual": "^3.1.3",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -40,10 +41,14 @@
     "react-dropdown-menu": "^0.0.2",
     "react-hook-form": "^7.49.2",
     "react-loader-spinner": "^6.1.6",
+    "react-virtual": "^2.10.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
   }
 }
