--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -46,6 +47,7 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-dropdown-menu": "^0.0.2",
     "react-hook-form": "^7.49.2",
