--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "react-dropdown-menu": "^0.0.2",
     "react-hook-form": "^7.49.2",
     "react-loader-spinner": "^6.1.6",
