--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.13.2",
     "@tanstack/react-virtual": "^3.1.3",
+    "ace-builds": "^1.33.2",
     "ag-grid-react": "^31.1.1",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
@@ -46,6 +47,7 @@
     "next-auth": "^4.24.5",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-ace": "^11.0.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
