--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,23 +45,23 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           script: |
+            set -e  # Exit on any error
             source ~/.bashrc || source ~/.profile
             cd /home/ubuntu/var/www/geoportal/geoportal-webapp
+
             # Stash all changes including pnpm-lock.yaml
             git stash push -m "Stash local changes" pnpm-lock.yaml
-            # Attempt to pull changes and handle possible conflicts
-            if git pull origin main; then
-              echo "Successfully pulled from main."
-            else
-              echo "Attempting to rebase..."
-              if git rebase --abort; then
-                echo "Rebase aborted due to conflicts."
-                exit 1  # Exit with error if rebase fails
-              fi
-            fi
+
+            # Force pull changes from main
+            git fetch origin main
+            git reset --hard origin/main
+
             # Pop the stash to restore changes
             git stash pop
+
+            # Install dependencies and build the project
             /home/ubuntu/.nvm/versions/node/v18.20.2/bin/pnpm install
             /home/ubuntu/.nvm/versions/node/v18.20.2/bin/pnpm build
+
             # Use pm2 to manage the process
             /home/ubuntu/.nvm/versions/node/v18.20.2/bin/pm2 start /home/ubuntu/.nvm/versions/node/v18.20.2/bin/pnpm --name "geoportal" -- start || /home/ubuntu/.nvm/versions/node/v18.20.2/bin/pm2 restart geoportal -f
