--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "symlink-dir node_modules/cesium/Build/Cesium public/cesium"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -35,6 +36,7 @@
     "ace-builds": "^1.33.2",
     "ag-grid-react": "^31.1.1",
     "autoprefixer": "10.4.14",
+    "cesium": "^1.120.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -55,6 +57,7 @@
     "react-dropdown-menu": "^0.0.2",
     "react-hook-form": "^7.49.2",
     "react-loader-spinner": "^6.1.6",
+    "resium": "^1.18.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
@@ -62,6 +65,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "symlink-dir": "^6.0.1"
   }
 }
