--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-API_BASE_URL=http://dev3.webgis.co.id/be
+NEXT_PUBLIC_API_BASE_URL=http://dev3.webgis.co.id
 NEXTAUTH_SECRET=3b5I7U8uNeLtL3OAebCNxL7DMnMbYoqNyHhvOgzDPOk=
