feat: modify env production

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_BASE_URL=http://dev3.webgis.co.id
-NEXT_PUBLIC_GEOPORTAL_PATH=/gs
+NEXT_PUBLIC_BASE_URL=https://bpiwdev.webgis.app
+NEXT_PUBLIC_GEOPORTAL_PATH=/gp
 NEXTAUTH_SECRET=3b5I7U8uNeLtL3OAebCNxL7DMnMbYoqNyHhvOgzDPOk=
+NEXTAUTH_URL=https://bpiwdev.webgis.app/gp/api/auth
