--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "NODE_ENV=production next build",
+    "build:local": "NODE_ENV=local next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "symlink-dir node_modules/cesium/Build/Cesium public/cesium"
@@ -33,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.13.2",
     "@tanstack/react-virtual": "^3.1.3",
+    "@thatopen/components": "^2.2.10",
     "ace-builds": "^1.33.2",
     "ag-grid-react": "^31.1.1",
     "autoprefixer": "10.4.14",
@@ -61,6 +63,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
+    "web-ifc": "^0.0.57",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
