change env prod

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_BASE_URL=https://bpiwdev.webgis.app
-NEXT_PUBLIC_GEOPORTAL_PATH=/gp
+NEXTAUTH_URL=http://103.6.53.254:16890/api/auth
 NEXTAUTH_SECRET=3b5I7U8uNeLtL3OAebCNxL7DMnMbYoqNyHhvOgzDPOk=
-NEXTAUTH_URL=https://bpiwdev.webgis.app/gp/api/auth
+NEXT_PUBLIC_GEOPORTAL_PATH=
+NEXT_PUBLIC_BASE_URL=http://103.6.53.254:16890
+NEXT_PUBLIC_GEOSERVER_URL=http://103.6.53.254:16888
